# libcommons

./: .gitignore  CMakeLists.txt  README.md
src/: buffer.cc  dataBuffer.cc  events.cc  fileio.cc  logger.cc  misc.cc  random.cc  scheduling.cc  stringtools.cc  threadpool.cc
src/commons/: buffer.hh  dataBuffer.hh  events.hh  export.hh  fileio.hh  logger.hh  misc.hh  random.hh  scheduling.hh  serialization.hh  stringtools.hh  threadpool.hh
src/commons/math/: aabb.hh  aabb2D.hh  aabb3D.hh  capsule.hh  circle.hh  compound.hh  fixed.hh  general.hh  glmconversion.hh  interpolation.hh  intersection.hh  linesegment.hh  linesegment2D.hh  mat3.hh  mat4.hh  quad.hh  quaternion.hh  shapes.hh  sphere.hh  triangle.hh  util.hh  vec2.hh  vec3.hh  vec4.hh
